<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="type your name..."
        android:inputType="textCapWords" />

    <TextView
        android:layout_marginTop="16dp"
        android:text="@string/topping"
        style="@style/header_text_style"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingLeft="24dp"
        android:text="@string/whicpcream"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkboxChocolate"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingLeft="24dp"
        android:text="@string/chocolate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view1"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/quantity"
        style="@style/header_text_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="+" />
    </LinearLayout>

    <TextView
        android:id="@+id/order_summary_textview"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/ordersummery"
        style="@style/header_text_style" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:paddingTop="16dp"
        android:text="@string/button_order" />

</LinearLayout>